force-app/main/default/objects/RFC_Comment__c/RFC_Comment__c.object-meta.xml
<CustomObject>
    <description>Comments/Notes for Request for Change Requests</description>
    <label>RFC Comment</label>
    <nameField>
        <displayFormat>RFCComment-{00000}</displayFormat>
        <label>RFC Comment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFC Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>