force-app/main/default/objects/RFC_Comment__c/fields/Notify_RFC_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_RFC_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if you want an email notification to go to the RFC Owner.  This will only send on the Comment being created, NOT when the comment is edited.</inlineHelpText>
    <label>Notify RFC Owner</label>
    <type>Checkbox</type>
</CustomField>