force-app/main/default/objects/RFC_Comment__c/fields/Related_RFC__c.field-meta.xml
<CustomField>
    <fullName>Related_RFC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related RFC</label>
    <referenceTo>Request_for_Change__c</referenceTo>
    <relationshipLabel>Work Comments</relationshipLabel>
    <relationshipName>RFC_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>