force-app/main/default/objects/RFC_Comment__c/fields/RFCAssignedTosEmail__c.field-meta.xml
<CustomField>
    <fullName>RFCAssignedTosEmail__c</fullName>
    <label>RFC&#39;s Assigned To&#39;s Email</label>
    <type>Email</type>
</CustomField>